@@ -1,7 +1,6 @@
 package org.asciidoctor.maven.test.processors;
 
 import java.util.HashMap;
-import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
 
@@ -9,11 +8,14 @@ import org.asciidoctor.ast.StructuralNode;
 import org.asciidoctor.extension.BlockProcessor;
 import org.asciidoctor.extension.Reader;
 
+import com.google.common.collect.ImmutableList;
+import com.google.common.collect.ImmutableMap;
+
 public class YellBlockProcessor extends BlockProcessor {
 
     @SuppressWarnings("serial")
-    private static Map<String, Object> configs = Map.of(
-            "contexts", List.of(":listing"),
+    private static Map<String, Object> configs = ImmutableMap.of(
+            "contexts", ImmutableList.of(":listing"),
             "content_model", ":compound"
     );
 
@@ -28,6 +30,6 @@ public class YellBlockProcessor extends BlockProcessor {
                 .map(String::toUpperCase)
                 .collect(Collectors.joining("\n"));
 
-        return createBlock(parent, "paragraph", List.of(upperLines), attributes, new HashMap<>());
+        return createBlock(parent, "paragraph", ImmutableList.of(upperLines), attributes, new HashMap<>());
     }
 }
